reviewers are now removed from title page in proposal mode

--- a/Thesis.cls
+++ b/Thesis.cls
@@ -238,7 +238,9 @@
       \smallskip
       {\large Advisor: \advname \par}
       \smallskip
-      {\large Reviewers: \examname \par}
+      \doifnotproposal{
+        {\large Reviewers: \examname \par}
+      }
       \bigskip
       {\large \@date \par}
       \bigskip
